--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -6,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Кулинарный компас{% endblock %}</title>
     
-
+    {% load static %}
+    
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/forms.css' %}">
     
     {% block extra_css %}{% endblock %}
+    
+
 </head>
 <body>
+
+    <div class="bg-pattern"></div>
+    
     <nav class="navbar">
         <div class="navbar-container">
             <a href="{% url 'home' %}" class="navbar-brand">🍳 Кулинарный компас</a>
@@ -48,6 +53,7 @@
         {% block content %}
         {% endblock %}
     </div>
+
 
     {% block extra_js %}{% endblock %}
 </body>
