--- a/static/css/favorites.css
+++ b/static/css/favorites.css
@@ -3,6 +3,9 @@
     text-align: center;
     margin: 30px 0;
 }
+ .favorites-recipes-container h1{
+    color: #fff;
+ }
 
 /* Сетка карточек */
 .favorite-recipe-grid {
