Css для логина пароля (с инфой о правильности пароля и логина, ее как будто бы удалить)

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="auth-container">
   <h2>Вход</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Войти</button>
   </form>
+  <div class="auth-footer">
+    <p>Нет аккаунта? <a href="{% url 'register' %}">Зарегистрироваться</a></p>
+  </div>
+</div>
 {% endblock %}
