--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="auth-container">
   <h2>Регистрация</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Зарегистрироваться</button>
   </form>
+  <div class="auth-footer">
+    <p>Уже есть аккаунт? <a href="{% url 'login' %}">Войти</a></p>
+  </div>
+</div>
 {% endblock %}
