--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}Кулинарный компас{% endblock %}</title>
     
     {% load static %}
-    
+    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/forms.css' %}">
     
