--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="logout-container">
   <h2>Вы вышли из аккаунта</h2>
   <a href="{% url 'login' %}">Войти снова</a>
+</div>
 {% endblock %}
