--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -53,8 +53,12 @@
         </div>
         
         <div class="recipe-actions">
+            {% if is_favorite %}
+              <a href="{% url 'favorite_recipes' %}" class="btn btn-secondary">← Назад к рецептам</a>
+            {%else%}
+
             <a href="{% url 'all_recipes' %}" class="btn btn-secondary">← Назад к рецептам</a>
-            
+            {%endif%}
             {% if user.is_authenticated %}
                 {% if is_favorite %}
                     <a href="{% url 'remove_from_favorites' recipe.id %}" class="btn btn-secondary">💔 Удалить из избранного</a>
