--- a/templates/recipes/all_recipes.html
+++ b/templates/recipes/all_recipes.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="filters-container" style="margin-bottom: 20px;">
+<div class="filters-container">
     <form method="get" class="filters-form">
         <div class="filter-item">
             <label for="time_min">Время от:</label>
@@ -22,7 +22,7 @@
         </div>
 
         <div class="filter-item">
-            <label for="ingredients_count">ОТ Кол-во ингредиентов:</label>
+            <label for="ingredients_count">Кол-во ингредиентов:</label>
             <input type="number" id="ingredients_count" name="ingredients_count" value="{{ request.GET.ingredients_count }}">
         </div>
 
@@ -35,9 +35,10 @@
             </select>
         </div>
 
-        <button type="submit" class="btn btn-secondary">Применить фильтры</button>
-        <button class="btn btn-secondary" type="submit"><a href="{% url 'all_recipes' %}" style="text-decoration: none; color: white;" >Сбросить фильтры</a></button>
-
+        <div class="filters-actions">
+            <button type="submit" class="btn btn-secondary">Применить фильтры</button>
+            <a href="{% url 'all_recipes' %}" class="btn btn-secondary">Сбросить фильтры</a>
+        </div>
     </form>
 </div>
 
@@ -56,7 +57,7 @@
                 
                 <div class="recipe-content">
                     <h3 class="recipe-title">{{ recipe.title }}</h3>
-                    <p class="recipe-description">{{ recipe.description|truncatewords:20 }}</p>
+                    <p class="recipe-description">{{ recipe.description|truncatewords:15 }}</p>
                     
                     <div class="recipe-meta">
                         <span class="cooking-time">⏱️ {{ recipe.cooking_time }} мин.</span>
@@ -75,7 +76,7 @@
                         </ul>
                     </div>
                     
-                    <a href="{% url 'recipe_detail' recipe.id %}" class="btn btn-primary">Посмотреть рецепт</a>
+                    <a href="{% url 'recipe_detail' recipe.id %}" class="btn">Посмотреть рецепт</a>
                 </div>
             </div>
             {% endfor %}
